[package]
name = "reson"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "reson"
path = "src/main.rs"

[lib]
name = "reson"
path = "src/lib.rs"

[dependencies]
sysinfo = "0.29.0"
ratatui = "0.24.0"
crossterm = "0.27"
color-eyre = "0.6"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
